@@ -662,6 +662,7 @@ afade=t=out:ss=875:d=25
 @end example
 @end itemize
 
+@anchor{aformat}
 @section aformat
 
 Set output format constraints for the input audio. The framework will
@@ -3028,6 +3029,7 @@ framework.
 
 The filter does not take parameters.
 
+@anchor{format}
 @section format
 
 Convert the input video to one of the specified pixel formats.
@@ -6084,6 +6086,43 @@ tools.
 @c man begin MULTIMEDIA FILTERS
 
 Below is a description of the currently available multimedia filters.
+
+@section aperms, perms
+
+Set read/write permissions for the output frames.
+
+These filters are mainly aimed at developers to test direct path in the
+following filter in the filtergraph.
+
+The filters accept parameters as a list of @var{key}=@var{value} pairs,
+separated by ":". If the key of the first options is omitted, the argument is
+assumed to be the @var{mode}.
+
+A description of the accepted parameters follows.
+
+@table @option
+@item mode
+Select the permissions mode.
+
+It accepts the following values:
+@table @samp
+@item none
+Do nothing. This is the default.
+@item ro
+Set all the output frames read-only.
+@item rw
+Set all the output frames directly writable.
+@item toggle
+Make the frame read-only if writable, and writable if read-only.
+@item random
+Set each output frame read-only or writable randomly.
+@end table
+@end table
+
+Note: in case of auto-inserted filter between the permission filter and the
+following one, the permission might not be received as expected in that
+following filter. Inserting a @ref{format} or @ref{aformat} filter before the
+perms/aperms filter can avoid this problem.
 
 @section aselect, select
 Select frames to pass in output.
