@@ -7,6 +7,7 @@ version <next>:
 - ffmpeg now fails when input options are used for output file
   or vice versa
 - support for Monkey's Audio versions from 3.93
+- perms and aperms filters
 
 
 version 1.2:
